--- a/css/styles.css
+++ b/css/styles.css
@@ -19,7 +19,8 @@
     --teams-bg: #F5F4FA;
     --heder-border: #ECECEC;
     --hero-bgr: #C4C4C4;
-    --icon-color: #afb1b8; 
+    --icon-color: #afb1b8;
+    --cubik: cubic-bezier(0.4, 0, 0.2, 1);
 }
 h1,h2,h3,h4,h5,h6,p,ul{
    margin-top: 0px;
@@ -41,6 +42,7 @@ img{
     height: auto;
     display: block;
 }
+
 .container{
     width: 1200px;
     margin-left: auto;
@@ -48,10 +50,12 @@ img{
     padding-left: 15px;
     padding-right: 15px;
   }
+
 .main-div{
     display: flex;
     align-items: center;
 }
+
 .page-header{
     border-bottom: 1px solid var(--heder-border);
 }
@@ -93,8 +97,8 @@ display: block;
 
 .site-nav .item{
     display: flex;
-
 }
+
 .site-nav .item + .item{
     margin-left: 50px;
 }
@@ -102,6 +106,8 @@ display: block;
     display: flex;
     padding-top: 32px;
     padding-bottom: 32px;
+
+    position: relative;
 
     color: var(--h-color-text);
     font-weight: 500;
@@ -112,6 +118,18 @@ display: block;
 .site-nav .curentli {
     color: var(--btn-and-accent);
 }
+
+.site-nav .curentli::after{
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 4px;
+    border-radius: 2px;
+    background: var(--btn-and-accent);
+}
+
 .contact {
     display: flex;
     margin-left: auto;
@@ -199,6 +217,51 @@ display: block;
 .btn:focus{
    background-color: var(--btn-hover-primery);
 }
+
+.backdrop{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.2);
+}
+
+.backdrop.is-hidden{
+    opacity: 0;
+    pointer-events: none;
+}
+
+.modal{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+
+    min-width: 528px;
+    min-height: 581px;
+    border-radius: 4px;
+    background-color: var(--main-bg);
+    padding: 8px;
+}
+.btn-close{
+    display: flex;
+    position: absolute;
+    width: 30px;
+    height: 30px;
+    top: 8px;
+    right: 8px;
+    border-radius: 50%;
+    background: var(--main-bg);
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    padding: 6px;
+    cursor: pointer;
+    background-image: url(../images/close.svg);
+    background-position: center;
+    background-repeat: no-repeat
+}
+
+/* end HERO */
 
 .visually-hidden {
     position: absolute;
@@ -322,6 +385,26 @@ width: calc((100% - 90px) / 4);
 }
 .work {
     padding-top: 0px;
+}
+.work .item{
+    position: relative;
+}
+.description{
+    padding: 27px 82px;
+    position: absolute;
+    width: 100%;
+    height: 70px;
+    bottom: 0;
+    left: 0;
+    text-align: center;
+    background: rgba(47, 48, 58, 0.8);
+}
+.text-description{
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.14;
+    text-transform: uppercase;
+    color: var(--main-bg);
 }
 .section-title{
     text-align: center;
@@ -492,6 +575,30 @@ padding-left: 0px;
     color: var(--h-color-text);
 }
 
+.portfolio-img{
+    position: relative;
+    overflow: hidden;
+}
+
+.text-contein{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    padding: 63px 24px;
+    background: rgba(33, 150, 243, 0.9);
+    overflow: hidden;
+    transform: translateY(0%);
+    transition: transform 250ms var(--cubik);
+}
+.hidden-text{
+    font-size: 18px;
+    line-height: 1.56;
+    color: var(--main-bg);
+}
+.galery-item:hover .text-contein{
+    transform: translateY(-100%);
+}
+
 .portfolio-link:focus,
 .portfolio-link:hover{
 box-shadow: 
@@ -513,6 +620,9 @@ box-shadow:
     padding: 6px 22px;
     border: none;
     border-radius: 4px;
+    transition: background-color 250ms var(--cubik),
+        color 250ms var(--cubik),
+        box-shadow 250ms var(--cubik);
 }
 
 .btn-portfolio:hover,
