--- a/css/styles.css
+++ b/css/styles.css
@@ -91,7 +91,6 @@ img {
 
 .site-nav {
   margin-left: 93px;
-  display: flex;
 }
 
 .site-nav .item {
@@ -121,7 +120,7 @@ img {
 .site-nav .curentli::after {
   content: '';
   position: absolute;
-  bottom: -3px;
+  bottom: -1px;
   left: 0;
   width: 100%;
   height: 4px;
@@ -249,12 +248,12 @@ img {
 }
 
 .btn-close {
-  display: flex;
   position: absolute;
-  width: 30px;
-  height: 30px;
   top: 8px;
   right: 8px;
+  
+  width: 30px;
+  height: 30px;
   border-radius: 50%;
   background: var(--main-bg);
   border: 1px solid rgba(0, 0, 0, 0.1);
@@ -263,6 +262,13 @@ img {
   background-image: url(../images/close.svg);
   background-position: center;
   background-repeat: no-repeat;
+  transition: background-color 250ms var(--cubik);
+}
+
+.btn-close:hover,
+.btn-close:focus{
+  background-color: var(--icon-color);
+
 }
 
 /* end HERO */
@@ -386,7 +392,9 @@ img {
   position: relative;
 }
 .description {
-  padding: 27px 82px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   position: absolute;
   width: 100%;
   height: 70px;
@@ -424,9 +432,6 @@ img {
   font-size: 16px;
   line-height: 1.18;
   color: var(--main-text-color);
-}
-.site-nav {
-  display: flex;
 }
 
 .section-list,
@@ -570,21 +575,29 @@ img {
 }
 
 .text-contein {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
   position: absolute;
   width: 100%;
   height: 100%;
-  padding: 63px 24px;
+  padding: 0px 24px;
   background: rgba(33, 150, 243, 0.9);
+
   overflow: hidden;
   transform: translateY(0%);
   transition: transform 250ms var(--cubik);
 }
+
 .hidden-text {
   font-size: 18px;
   line-height: 1.56;
   color: var(--main-bg);
 }
-.galery-item:hover .text-contein {
+
+.portfolio-link:hover .text-contein,
+.portfolio-link:focus .text-contein {
   transform: translateY(-100%);
 }
 
@@ -624,8 +637,8 @@ img {
 .section-list .prt-item + .prt-item {
   margin-left: 8px;
 }
-.prt-item {
-  margin-bottom: 50px;
+.filtr {
+  padding-bottom: 50px;
 }
 .prt-work {
   display: flex;
